common-base/old/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: 100M
spec:
  rules:
  - host: $(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
